# FTHA_optimization

./: .gitignore  README.md  pyproject.toml
artigo/: exemplo-latex.bib  exemplo-latex.tex  sbpo-template.sty  sbpo.bst
data/: data.csv
reports/: case_study_base_case_states.csv  case_study_base_case_summary.csv  design_space_screening.csv  design_space_screening_summary.csv  multiobjective_best_solutions.csv  multiobjective_configuration.csv  multiobjective_hv48_global_test.csv  multiobjective_hv48_pairwise_tests.csv  multiobjective_hv48_pareto_solutions.csv  multiobjective_hv48_representative_runs.csv  multiobjective_hv48_run_statistics.csv  multiobjective_hv48_summary.csv  multiobjective_pareto_solutions.csv  multiobjective_run_statistics.csv  multiobjective_summary.csv  nsga3_sensitivity_best_configuration.csv  nsga3_sensitivity_convergence.csv  nsga3_sensitivity_design.csv  nsga3_sensitivity_factor_importance.csv  nsga3_sensitivity_interactions.csv  nsga3_sensitivity_main_effects.csv  nsga3_sensitivity_pairwise_tests.csv  nsga3_sensitivity_pareto_solutions.csv  nsga3_sensitivity_reference_front.csv  nsga3_sensitivity_runs.csv  nsga3_sensitivity_summary.csv  sensitivity_analysis.csv  sensitivity_analysis_summary.csv
src/: FTHA.py  __init__.py  article_validation.py  base_case_analysis.py  gas_prop.py  multiobjective_optimization.py  nsga3_sensitivity_analysis.py  sensitivity_analysis.py
tests/: test_article_validation.py  test_ftha.py  test_multiobjective_optimization.py  test_nsga3_sensitivity_analysis.py  test_sensitivity_analysis.py
