[project]
name = "ftha-optimization"
version = "0.1.0"
description = "Modelo FTHA do ciclo Otto para otimização multiobjetivo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
    "numpy>=2.0",
    "pandas>=3.0.3",
]
